enable SSL support for the server
Signed-off-by: tesla59 <nishant@heim.id>

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,10 @@
 server:
   host: 127.0.0.1
   port: 8080
+  ssl:
+    enabled: false
+    certfile: cert.pem
+    keyfile: key.pem
 
 db:
   host: localhost
