--- a/.github/workflows/deploy-main.yaml
+++ b/.github/workflows/deploy-main.yaml
@@ -8,7 +8,7 @@ env:
   PROJECT_NAME: blaze
   HOST_PORT: 5000
   TARGET_PORT: 8080
-  DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/$PROJECT_NAME
+  DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/blaze
 
 jobs:
   build:
