--- a/.github/workflows/deploy-main.yaml
+++ b/.github/workflows/deploy-main.yaml
@@ -48,6 +48,7 @@ jobs:
         with:
           context: .
           push: true
+          platforms: linux/amd64, linux/arm64
           tags: |
               ${{ env.DOCKER_IMAGE }}:latest
               ${{ env.DOCKER_IMAGE }}:${{ steps.version.outputs.version }}
